Added notes on factoring using the quadratic formula

--- a/Maths/Algebra 1.tex
+++ b/Maths/Algebra 1.tex
@@ -315,4 +315,30 @@ An expression can sometimes be factored by breaking the expression up into group
 	\end{align*}	
 \end{example}
 
+\subsection{Factoring With The Quadratic Formula}
+
+If the previous methods don't work and you with to factor a quadratic, you can use ths following method.
+The best way to show this is with an example.
+
+\begin{example}[Factor]
+	$3x^2 - 17x + 20$\\
+\textbf{Answer:}
+
+First, you must let the expression equal $0$, and then solve for $x$:
+
+\begin{align*}
+	&3x^2 - 17x + 20 = 0\\
+	&\implies x
+	= \frac{17 \pm \sqrt{(-17)^2 - 4(3)(20)}}{2(3)}
+	= \frac{17 \pm 7}{6}\\
+	&\implies x = 4 \text{ or } x = \frac{5}{3}
+\end{align*}
+
+From this you can find that if $x = 4$, then $x- 4$ is a factor.
+If $x = \frac{5}{3} \implies 3x = 5$, then $3x - 5$ is a factor
+
+$$
+\therefore 3x^2 - 17x + 20 = (3x -5)(x - 4)
+$$
+\end{example}
 \end{document}
