--- a/Maths/Algebra 1.tex
+++ b/Maths/Algebra 1.tex
@@ -1,4 +1,4 @@
-\documentclass[english,seminar]{lecture}
+\documentclass[english,course]{lecture}
 
 \usepackage{polynom}
 \usepackage{cancel}
@@ -74,9 +74,9 @@ Adding and subtracting polynomials involves the combination of like terms.
 
 
 	\begin{align*}
-		  &(6x^2 – 7x + 4) + (7x^2 – 9x + 8)      \\
-		  &= (6x^2 + 7x^2) + (-7x - 9x) + (4 + 8) \\
-		  &= 13x^2 - 16x^2 + 12
+		  & (6x^2 – 7x + 4) + (7x^2 – 9x + 8)      \\
+		  & = (6x^2 + 7x^2) + (-7x - 9x) + (4 + 8) \\
+		  & = 13x^2 - 16x^2 + 12
 	\end{align*}
 \end{example}
 
@@ -85,9 +85,9 @@ Adding and subtracting polynomials involves the combination of like terms.
 
 
 	\begin{align*}
-		  &(9x^5 – 6x^3 + 7x^2) - (7x^3 – 6x^5 + 2x^2)         \\
-		  &= (9x^5 - (-6x^5)) + (-6x^3 - 7x^3) + (7x^2 - 2x^2) \\ 
-		  &= 15x^5 - 13x^3 + 5x^2
+		  & (9x^5 – 6x^3 + 7x^2) - (7x^3 – 6x^5 + 2x^2)         \\
+		  & = (9x^5 - (-6x^5)) + (-6x^3 - 7x^3) + (7x^2 - 2x^2) \\
+		  & = 15x^5 - 13x^3 + 5x^2
 	\end{align*}
 \end{example}
 
@@ -96,7 +96,7 @@ Adding and subtracting polynomials involves the combination of like terms.
 Polynomials are multiplied using the distributive property of addition:
 
 $$
-a(b + c) = ab + ac
+	a(b + c) = ab + ac
 $$
 
 \begin{example}[Simplify]
@@ -104,9 +104,9 @@ $$
 
 
 	\begin{align*}
-		  &(x + 4)(2x + 5)      \\
-		  &= 2x^2 + 8x + 5x + 20 \\
-		  &= 2x^2 + 13x + 20
+		  & (x + 4)(2x + 5)       \\
+		  & = 2x^2 + 8x + 5x + 20 \\
+		  & = 2x^2 + 13x + 20
 	\end{align*}
 \end{example}
 
@@ -130,9 +130,9 @@ the quotient can be simplified by dividing each term of the numerator by the den
 
 
 	\begin{align*}
-		&\frac{-16x^4 + 8x^2 + 2x}{2x}\\
-		&= \frac{-16x^4}{2x} + \frac{8x^2}{2x} + \frac{2x}{2x}\\
-		&= -7x^3 + 4x + 1
+		  & \frac{-16x^4 + 8x^2 + 2x}{2x}                         \\
+		  & = \frac{-16x^4}{2x} + \frac{8x^2}{2x} + \frac{2x}{2x} \\
+		  & = -7x^3 + 4x + 1
 	\end{align*}
 \end{example}
 
@@ -147,9 +147,9 @@ by factoring the numerator and then canceling out the factor.
 
 
 	\begin{align*}
-	&\frac{15x^2 + 22x + 8}{5x + 4}	\\
-	&= \frac{(3x + 2)\cancel{(5x + 4)}}{\cancel{5x + 4}}\\
-	&= 3x + 2
+		  & \frac{15x^2 + 22x + 8}{5x + 4}                      \\
+		  & = \frac{(3x + 2)\cancel{(5x + 4)}}{\cancel{5x + 4}} \\
+		  & = 3x + 2
 	\end{align*}
 \end{example}
 
@@ -166,9 +166,9 @@ This is a generalized version of the arithmetic technique called long division.
 	\begin{center}
 		\polylongdiv{x^3 + x^2 - 2x}{x - 1}
 	\end{center}
-	
+
 	$$
-	\therefore \frac{x^3 + x^2 - 2x}{x - 1} = x^2 + 2x
+		\therefore \frac{x^3 + x^2 - 2x}{x - 1} = x^2 + 2x
 	$$
 \end{example}
 \\
@@ -185,28 +185,28 @@ This can just be added at the end. Here is an example of a remainder
 	\end{center}
 
 	$$
-	\therefore \frac{x^3 + x^2 - 1}{x - 1} = x^2 + 2x + 2 + \frac{1}{x - 1}
+		\therefore \frac{x^3 + x^2 - 1}{x - 1} = x^2 + 2x + 2 + \frac{1}{x - 1}
 	$$
-	
+
 \end{example}
 
 \subsubsection{Synthetic Division}
 
-If the denominator of the expression is $x - a$, where $a \in \mathbb{R}$, then you can use a 
+If the denominator of the expression is $x - a$, where $a \in \mathbb{R}$, then you can use a
 division technique called synthetic division.
 
 This technique is generally used in the process of finding the roots of a polynomial.
 
 \begin{example}[Complete]
-example \ref{long-div-example} using synthetic division.
+	example \ref{long-div-example} using synthetic division.
 
-\begin{center}
-\polyhornerscheme[x=1]{x^3 + x^2 - 2x}
-\end{center}
+	\begin{center}
+		\polyhornerscheme[x=1]{x^3 + x^2 - 2x}
+	\end{center}
 
-$$
-\therefore \frac{x^3 + x^2 - 2x}{x - 1} = x^2 + 2x
-$$
+	$$
+		\therefore \frac{x^3 + x^2 - 2x}{x - 1} = x^2 + 2x
+	$$
 
 \end{example}
 
@@ -229,8 +229,8 @@ This method can be done by looking for the highest common factor of each of the 
 
 \begin{example}[Factor]
 	\begin{align*}
-		2x^2 + 6x &= 2x(x + 3)\\
-		15axy + 2xyb + 4xy &= 2xy(7a + b + 2)
+		2x^2 + 6x          & = 2x(x + 3)       \\
+		15axy + 2xyb + 4xy & = 2xy(7a + b + 2)
 	\end{align*}
 \end{example}
 
@@ -240,8 +240,8 @@ An expression can sometimes be factored by breaking the expression up into group
 
 \begin{example}[Factor]
 	\begin{align*}
-		6x^2y + 3xy^2 -12x - 6y &= 3xy(2x + y) - 6(2x + y)\\
-		&= (2x + y)(2xy - 5)
+		6x^2y + 3xy^2 -12x - 6y & = 3xy(2x + y) - 6(2x + y) \\
+		                        & = (2x + y)(2xy - 5)
 	\end{align*}
 \end{example}
 
@@ -253,66 +253,66 @@ An expression can sometimes be factored by breaking the expression up into group
 
 \begin{proof}
 	\begin{align*}
-		  (a + b)(a - b)
-		&= a(a - b) + b(a - b) \\
-		&= a^2 - ab + ab -b^2  \\
-		&= a^2 - b^2
+		(a + b)(a - b)
+		  & = a(a - b) + b(a - b) \\
+		  & = a^2 - ab + ab -b^2  \\
+		  & = a^2 - b^2
 	\end{align*}
 \end{proof}
 
 \begin{example}[Factor]
 	\begin{align*}
-		x^2 - 36 &= (x + 6)(x - 6)\\
-		4x^2 - 81 &= (2x + 9)(2x - 9)\\
-		9x^3 - 81x &= 9x(x^2 - 9) = 9x(x + 3)(x - 3)\\
-		16x^4 - 1 &= (4x^2 + 1)(4x^2 - 1) = (4x^2 + 1)(2x + 1)(2x - 1)\\
-	\end{align*}	
+		x^2 - 36   & = (x + 6)(x - 6)                                    \\
+		4x^2 - 81  & = (2x + 9)(2x - 9)                                  \\
+		9x^3 - 81x & = 9x(x^2 - 9) = 9x(x + 3)(x - 3)                    \\
+		16x^4 - 1  & = (4x^2 + 1)(4x^2 - 1) = (4x^2 + 1)(2x + 1)(2x - 1) \\
+	\end{align*}
 \end{example}
 
 \subsection{Difference Of Two Cubes}
 
 \begin{theorem}[Difference of two cubes]
-	An expression of the form $a^3 - b^3$ can be factored into $(a - b)(a^2 + ab + b^2)$	
+	An expression of the form $a^3 - b^3$ can be factored into $(a - b)(a^2 + ab + b^2)$
 \end{theorem}
 
 \begin{proof}
 	\begin{align*}
-		  (a-b)(a^2 + ab +b^2 )
-		&= a(a^2 + ab +b^2 ) - b(a^2 + ab +b^2 ) \\
-		&= (a^3 + a^2 b + ab^2) - (a^2b + ab^2 + b^3)  \\
-		&= (a^3 + \cancel{a^2 b + ab^2}) - (\cancel{a^2b + ab^2} + b^3)  \\
-		&= a^3 - b^3
+		(a-b)(a^2 + ab +b^2 )
+		  & = a(a^2 + ab +b^2 ) - b(a^2 + ab +b^2 )                        \\
+		  & = (a^3 + a^2 b + ab^2) - (a^2b + ab^2 + b^3)                   \\
+		  & = (a^3 + \cancel{a^2 b + ab^2}) - (\cancel{a^2b + ab^2} + b^3) \\
+		  & = a^3 - b^3
 	\end{align*}
 \end{proof}
 
 \begin{example}[Factor]
 	\begin{align*}
-		x^3 - 8 &= (x - 2)(x^2 + 2x + 4) \\
-		125x^3 - 27y^3 &= (5x - 3y)(25x^2 + 15xy + 9y^2)
-	\end{align*}	
+		x^3 - 8        & = (x - 2)(x^2 + 2x + 4)          \\
+		125x^3 - 27y^3 & = (5x - 3y)(25x^2 + 15xy + 9y^2)
+	\end{align*}
 \end{example}
 
 \subsection{Sum Of Two Cubes}
 
 \begin{theorem}[Sum of two cubes]
-	An expression of the form $a^3 + b^3$ can be factored into $(a + b)(a^2 - ab + b^2)$	
+	An expression of the form $a^3 + b^3$ can be factored into $(a + b)(a^2 - ab + b^2)$
 \end{theorem}
 
 \begin{proof}
 	\begin{align*}
-		  (a+b)(a^2 - ab +b^2 )
-		&= a(a^2 - ab +b^2 ) + b(a^2 - ab +b^2 ) \\
-		&= a^3 - a^2b + ab^2 + ba^2 - ab^2 + b^3  \\
-		&= a^3 - \cancel{a^2b + ab^2 + ba^2 - ab^2} + b^3  \\
-		&= a^3 + b^3
+		(a+b)(a^2 - ab +b^2 )
+		  & = a(a^2 - ab +b^2 ) + b(a^2 - ab +b^2 )          \\
+		  & = a^3 - a^2b + ab^2 + ba^2 - ab^2 + b^3          \\
+		  & = a^3 - \cancel{a^2b + ab^2 + ba^2 - ab^2} + b^3 \\
+		  & = a^3 + b^3
 	\end{align*}
 \end{proof}
 
 \begin{example}[Factor]
 	\begin{align*}
-		27x^3 + 1 &= (3x + 1)(9x^2 - 3x + 1) \\
-		81x^3 + 192b^3 &= (5x + 6b)(25x^2 - 30xb + 36b^2)
-	\end{align*}	
+		27x^3 + 1      & = (3x + 1)(9x^2 - 3x + 1)         \\
+		81x^3 + 192b^3 & = (5x + 6b)(25x^2 - 30xb + 36b^2)
+	\end{align*}
 \end{example}
 
 \subsection{Factoring With The Quadratic Formula}
@@ -322,23 +322,113 @@ The best way to show this is with an example.
 
 \begin{example}[Factor]
 	$3x^2 - 17x + 20$\\
-\textbf{Answer:}
+	\textbf{Answer:}
 
-First, you must let the expression equal $0$, and then solve for $x$:
+	First, you must let the expression equal $0$, and then solve for $x$:
 
-\begin{align*}
-	&3x^2 - 17x + 20 = 0\\
-	&\implies x
-	= \frac{17 \pm \sqrt{(-17)^2 - 4(3)(20)}}{2(3)}
-	= \frac{17 \pm 7}{6}\\
-	&\implies x = 4 \text{ or } x = \frac{5}{3}
-\end{align*}
+	\begin{align*}
+		  & 3x^2 - 17x + 20 = 0                        \\
+		  & \implies x
+		= \frac{17 \pm \sqrt{(-17)^2 - 4(3)(20)}}{2(3)}
+		= \frac{17 \pm 7}{6}\\
+		  & \implies x = 4 \text{ or } x = \frac{5}{3}
+	\end{align*}
 
-From this you can find that if $x = 4$, then $x- 4$ is a factor.
-If $x = \frac{5}{3} \implies 3x = 5$, then $3x - 5$ is a factor
+	From this you can find that if $x = 4$, then $x- 4$ is a factor.
+	If $x = \frac{5}{3} \implies 3x = 5$, then $3x - 5$ is a factor
 
-$$
-\therefore 3x^2 - 17x + 20 = (3x -5)(x - 4)
-$$
+	$$
+		\therefore 3x^2 - 17x + 20 = (3x -5)(x - 4)
+	$$
 \end{example}
+
+\section{Simplifying Algebraic Fractions}
+
+\begin{definition}[Algebraic Fraction]
+	An algebraic fraction is an expression of the form:
+
+	$$
+		\frac{f(x)}{g(x)}
+	$$
+
+	Where $f(x), g(x)$ are expressions in $x$.
+\end{definition}
+\\
+Algebraic fractions are simplified in much the same way as numerical fractions,
+and they are added, subtracted, multiplied and divided in the same way also.
+The simplification of fractions can be described with a number of rules:
+
+\begin{enumerate}
+	\item Fractions can be added once they have a common denominator.
+	\item A fraction can be simplified iff the numerator and denominator have a common factor (this is sometimes referred to as cancelling).
+	\item If the denominator or numerator contains a fraction, they should be reduced before proceeding.
+	\item Division of fractions is equivalent to multiplying the numerator by the inverse of the denominator.
+\end{enumerate}
+
+\subsection{Adding Algebraic Fractions}
+
+Fractions can be added once they have a common denominator, thus
+
+\begin{theorem}[Addition of fractions]
+	$$
+		\frac{a}{b} + \frac{c}{d} = \frac{ad + bc}{bd}
+	$$
+\end{theorem}
+
+\begin{proof}
+	\begin{align}
+		\frac{a}{b} + \frac{c}{d}
+		  & = \frac{a}{b} \cdot \frac{d}{d} + \frac{c}{d} \cdot \frac{b}{b} \label{multiplicive-identities} \\
+		  & = \frac{ad}{bd} + \frac{bc}{bd}                                                                 \\
+		  & = \frac{ad + bc}{bd}
+	\end{align}
+\end{proof}
+
+
+It should be noted that while the denominator in the above expressions is $bd$,
+$\text{LCM}(b,d)$ can be used instead, replacing $b/b$ and $d/d$ in \ref{multiplicive-identities}
+with their correct multiplicative identities.
+
+\begin{example}[Simplify]
+	$$
+		\frac{1}{x+2} + \frac{1}{x+3}
+	$$\\
+	\textbf{Answer:}
+
+	\begin{align*}
+		  & \frac{1}{x+2} + \frac{1}{x+3}    \\
+		= & \frac{(x+2) + (x+3)}{(x+2)(x+3)} \\
+		= & \frac{2x+5}{(x+2)(x+3)}
+	\end{align*}
+\end{example}
+
+It should be noted that in most cases it is not necessary to expand
+fully the expression in the denominator of the fraction, and usually can be
+left in factored form.
+
+\subsection{Reducing Algebraic Fractions}
+
+\begin{theorem}[Reduction of fractions]
+	A fraction can be simplified iff the numerator and denominator have a common factor.
+	This is sometimes referred to as cancelling.
+\end{theorem}
+\\
+You may need to factor the numerator and/or the denominator to
+find a common factor.
+
+\begin{example}[Simplify]
+	$$
+		\frac{2x^2 - 5x - 3}{4x^2 - 1}
+	$$
+	\\
+	\textbf{Answer:}
+
+	\begin{align*}
+		\frac{2x^2 - 5x - 3}{4x^2 - 1}
+		  & = \frac{(2x + 1)(x-3)}{(2x + 1)(2x - 1)}                   \\
+		  & = \frac{\cancel{(2x + 1)}(x-3)}{\cancel{(2x + 1)}(2x - 1)} \\
+		  & = \frac{x - 3}{2x - 1}
+	\end{align*}
+\end{example}
+
 \end{document}
