Move to a seperate PDFs folder

--- a/notes-template.tex
+++ b/notes-template.tex
@@ -175,6 +175,7 @@ $endif$
   {\end{mdframed}}
   
   \newcommand\Solution{\par\textbf{\textsf{Solution}}\par\medskip}
+  \renewcommand\qedsymbol{QED}
 
   \setlength{\parindent}{0in}
   \providecommand{\tightlist}{} % This is a command used by pandoc, you can define if needed.
