Added irish verbs

--- a/Irish/Verbs/07-09-18.md
+++ b/Irish/Verbs/07-09-18.md
@@ -2,6 +2,28 @@
 
 ## Can
 
+| **Aimsir Chaite** | **Aimsir Láithreach** | **Aimsir Fháistineach** |
+| ----------------- | --------------------- | ----------------------- |
+| Chan mé           | canaim                | canfaidh mé             |
+| Chanamar          | canaimid              | canfaimid               |
+| Níor chan sí      | Ní chanann            | Ní chanfidh             |
+| Ar chan?          | An channan?           | An canfidh?             |
+
 ## Freastal
 
+| **Aimsir Chaite**   | **Aimsir Láithreach** | **Aimsir Fháistineach** |
+| ------------------- | --------------------- | ----------------------- |
+| D'fhreastal mé      | Freastalaim           | Freastalfaidh mé        |
+| D'fhreastalamar     | Freastalaimid         | Freastalfaimid          |
+| Níor d'fhreastal sí | Ní freastalann        | Ní freastalfaidh        |
+| Ar d'fhreastal?     | An freastalann?       | An freastalfaidh?       |
+
 ## Fan
+
+| **Aimsir Chaite** | **Aimsir Láithreach** | **Aimsir Fháistineach** |
+| ----------------- | --------------------- | ----------------------- |
+| D'fhan mé         | Fanaim                | Fanfaidh mé             |
+| D'fhanamar        | Fanaimid              | Fanfaimid               |
+| Níor d'fhan sí    | Ní fanann             | Ní fanfaidh             |
+| Ar d'fhan?        | An fanann?            | An fanfaidh?            |
+
