Added more to the notes

--- a/Physics/Question About Calculations.tex
+++ b/Physics/Question About Calculations.tex
@@ -19,7 +19,7 @@
     ] (M) at (0,0) {};
     
     % Mirror intersection
-    \coordinate (P1) at (M.arc center |- M.22);
+    \coordinate (P1) at (M.45); %(M.arc center |- M.22);
   
     % baseline
     \draw (M.arc center) -- ($ (M.mirror center) - (3,0) $);
