Added a latex cheatsheet template

--- a/Irish/Verbs/07-09-18.md
+++ b/Irish/Verbs/07-09-18.md
@@ -6,8 +6,8 @@
 | ----------------- | --------------------- | ----------------------- |
 | Chan mé           | canaim                | canfaidh mé             |
 | Chanamar          | canaimid              | canfaimid               |
-| Níor chan sí      | Ní chanann            | Ní chanfidh             |
-| Ar chan?          | An channan?           | An canfidh?             |
+| Níor chan sí      | Ní chanann            | Ní chanfaidh             |
+| Ar chan?          | An channan?           | An canfaidh?             |
 
 ## Freastal
 
