Fixed the irish notes

--- a/Irish/Verbs/07-09-18.md
+++ b/Irish/Verbs/07-09-18.md
@@ -4,19 +4,19 @@
 
 | **Aimsir Chaite** | **Aimsir Láithreach** | **Aimsir Fháistineach** |
 | ----------------- | --------------------- | ----------------------- |
-| Chan mé           | canaim                | canfaidh mé             |
-| Chanamar          | canaimid              | canfaimid               |
-| Níor chan sí      | Ní chanann            | Ní chanfaidh             |
-| Ar chan?          | An channan?           | An canfaidh?             |
+| Chan mé           | Canaim                | Canfaidh mé             |
+| Chanamar          | Canaimid              | Canfaimid               |
+| Níor chan sí      | Ní chanann sé         | Ní chanfaidh            |
+| Ar chan?          | An gcanann sibh?      | An gcanfaidh tú?        |
 
 ## Freastal
 
 | **Aimsir Chaite**   | **Aimsir Láithreach** | **Aimsir Fháistineach** |
 | ------------------- | --------------------- | ----------------------- |
-| D'fhreastal mé      | Freastalaim           | Freastalfaidh mé        |
-| D'fhreastalamar     | Freastalaimid         | Freastalfaimid          |
-| Níor d'fhreastal sí | Ní freastalann        | Ní freastalfaidh        |
-| Ar d'fhreastal?     | An freastalann?       | An freastalfaidh?       |
+| D'fhreastal mé      | Freastalaím           | Freastalóidh mé         |
+| D'fhreastalaíomar   | Freastalaimid         | Freastalóimid           |
+| Níor fhreastal sí   | Ní fhreastalaíonn tú  | Ní fhreastalóidh sí     |
+| Ar fhreastal sibh?  | An bhfreastalaímid?   | An bhfreastalóimid?     |
 
 ## Fan
 
@@ -24,6 +24,6 @@
 | ----------------- | --------------------- | ----------------------- |
 | D'fhan mé         | Fanaim                | Fanfaidh mé             |
 | D'fhanamar        | Fanaimid              | Fanfaimid               |
-| Níor d'fhan sí    | Ní fanann             | Ní fanfaidh             |
-| Ar d'fhan?        | An fanann?            | An fanfaidh?            |
+| Níor d'fhan sí    | Ní fhanaim            | Ní fhanfaidh sibh       |
+| Ar fhan mé?       | An bhfanann sé?       | An bhfanfaidh siad?     d|
 
