Finish Irish Verbs

--- a/Irish/Verbs/14-09-18.md
+++ b/Irish/Verbs/14-09-18.md
@@ -2,6 +2,87 @@
 
 ## Freagair - Answer
 
+### Past Tense
+
+```
+D'fhreagair
+D'fhreagaireamar
+An freagair mé?
+Nior freagair sé
+```
+
+### Present Tense
+
+```
+Freagairim
+freagairimid
+An freagaireann tu?
+Ní freagairim
+```
+
+### Future Tense
+
+```
+Freagairfidh mé
+Freagairfimid
+An freagairfidh tú?
+Ní freagairfidh
+```
+
 ## Foghlaim - Learn
 
+### Past Tense
+
+```
+D'fhoghlaim mé
+D'fhoghlaimid
+An bhfoghlaim tú
+Ní foghlaim
+```
+
+### Present Tense
+
+```
+Foghlaím
+Foghlaimímid
+An bhfoghlaim tú
+Ní fhoghlaim
+```
+
+### Future Tense
+
+```
+Foghlaimeoidh mé
+Foghlaimfimid
+An foghlaimeoidh sé
+Ni foghlaimeoidh
+```
+
 ## Cuir - Put
+
+### Past Tense
+
+```
+Chuir mé
+Chuireamar
+An cuir?
+Nior chuir
+```
+
+### Present Tense
+
+```
+Cuirim
+Cuirimid
+An cuirim
+Ní cuireann
+```
+
+### Future Tense
+
+```
+Cuirfidh mé
+Cuirfimid
+An cuirfidh sé?
+Ní cuirfidh
+```
