Added more school notes

--- a/Irish/Verbs/19-10-18.md
+++ b/Irish/Verbs/19-10-18.md
@@ -1,6 +1,20 @@
 # Verbs
 
+
+
+
+
+
+
+
+
 ## Fill
+
+d'fhill, d'fhilleamar
+
+filleann, fillimid
+
+fillfidh, fillfimid
 
 ### Aimsir Chaite
 d'fhill mé
@@ -34,6 +48,10 @@ fillfidh sibh
 fillfidh siad
 
 ## Imir
+
+D'imir
+
+D'imríomar
 
 ### Aimsir Chaite
 d'imir mé
